@@ -80,9 +80,11 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M7</version>
                     <configuration>
-                        <!-- 
-                            <argLine>dash dash enable-preview</argLine>
-                        -->
+                         
+                            <argLine>
+                             --add-opens app/app=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                            </argLine>
+                        
                     </configuration>
                 </plugin>
                 <!-- Run the checkstyle code quality tool -->
